--- a/hadoop-hive.env
+++ b/hadoop-hive.env
@@ -44,3 +44,8 @@ YARN_CONF_yarn_scheduler_capacity_maximum___am___resource___percent=0.75
 
 MAPRED_CONF_mapreduce_framework_name=yarn-tez
 MAPRED_CONF_mapred_job_reuse_jvm_num_tasks=10
+MAPRED_CONF_mapred_child_java_opts=-Xmx2048m
+MAPRED_CONF_mapreduce_map_memory_mb=2048
+MAPRED_CONF_mapreduce_reduce_memory_mb=2048
+MAPRED_CONF_mapreduce_map_java_opts=-Xmx1024m
+MAPRED_CONF_mapreduce_reduce_java_opts=-Xmx1024m
