--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "8042:8042"
   hive-server:
-    image: local/hive-on-tez:2.3.5-0.9.2
+    image: local/hive-on-tez:2.3.5-0.9.2i
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -58,6 +58,11 @@ services:
       SERVICE_PRECONDITION: "hive-metastore:9083 namenode:50070 datanode:50075"
     ports:
       - "10000:10000"
+      - "21000:21000"
+      - "21050:21050"
+      - "25000:25000"
+      - "25010:25010"
+      - "25020:25020"
   hive-metastore:
     image: local/hive-on-tez:2.3.5-0.9.2
     env_file:
