--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "8042:8042"
   hive-server:
-    image: local/hive-on-tez:2.3.5-0.9.2i
+    image: local/hive-on-tez:2.3.5-0.9.2-impala
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -64,7 +64,7 @@ services:
       - "25010:25010"
       - "25020:25020"
   hive-metastore:
-    image: local/hive-on-tez:2.3.5-0.9.2
+    image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
