add more components

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,10 +76,45 @@ services:
     image: bde2020/hive-metastore-postgresql:2.3.0
     ports:
       - "54320:5432"
+  zoo:
+    image: zookeeper:3.4.10
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=0.0.0.0:2888:3888
+    ports:
+      - 2181:2181
+  hbase-master:
+    image: bde2020/hbase-master:1.0.0-hbase1.2.6
+    env_file:
+      - ./hbase-distributed-local.env
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zoo:2181"
+    ports:
+      - 16000:16000
+      - 16010:16010
+  hbase-region:
+    image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
+    env_file:
+      - ./hbase-distributed-local.env
+    environment:
+      HBASE_CONF_hbase_regionserver_hostname: hbase-region
+      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zoo:2181 hbase-master:16010"
+    ports:
+      - 16020:16020
+      - 16030:16030
+  
   presto-coordinator:
     image: shawnzhu/prestodb:300
     ports:
       - "8080:8080"
+  nginx-proxy:
+    image: docker.io/nginx:1.13
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./proxy/conf.d:/etc/nginx/conf.d
+      - ./proxy/conf.stream.d:/etc/nginx/conf.stream.d
+    ports:
+      - "7070:7070"
 
 volumes:
   namenode:
