--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
+    commamd: $HADOOP_PREFIX/bin/yarn --config $HADOOP_CONF_DIR timelineserver && $HADOOP_PREFIX/sbin/mr-jobhistory-daemon.sh start historyserver
     volumes:
       - historyserver:/hadoop/yarn/timeline
     env_file:
@@ -53,6 +54,7 @@ services:
     image: local/hive-on-tez:2.3.5-0.9.2-impala
     env_file:
       - ./hadoop-hive.env
+      - ./hbase-distributed-local.env
     environment:
       HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
       SERVICE_PRECONDITION: "hive-metastore:9083 namenode:50070 datanode:50075"
@@ -63,6 +65,7 @@ services:
       - "25000:25000"
       - "25010:25010"
       - "25020:25020"
+      - "7070:7070"
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
@@ -75,7 +78,7 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
     ports:
-      - "54320:5432"
+      - "5432:5432"
   zoo:
     image: zookeeper:3.4.10
     environment:
@@ -107,6 +110,7 @@ services:
     image: shawnzhu/prestodb:300
     ports:
       - "8080:8080"
+
   nginx-proxy:
     image: docker.io/nginx:1.13
     volumes:
@@ -114,7 +118,7 @@ services:
       - ./proxy/conf.d:/etc/nginx/conf.d
       - ./proxy/conf.stream.d:/etc/nginx/conf.stream.d
     ports:
-      - "7070:7070"
+      - "9998:9998"
 
 volumes:
   namenode:
