--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,14 @@ services:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     volumes:
       - namenode:/hadoop/dfs/name
+      - ./network/hosts:/etc/hosts
     environment:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop-hive.env
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.2
     ports:
       - "50070:50070"
       - "8020:8020"
@@ -16,19 +20,28 @@ services:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     volumes:
       - datanode:/hadoop/dfs/data
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hadoop-hive.env
     environment:
       SERVICE_PRECONDITION: "namenode:50070"
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.3
     ports:
       - "50075:50075"
       - "50010:50010"
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
+    volumes:
+      - ./network/hosts:/etc/hosts
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
     env_file:
       - ./hadoop-hive.env
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.4
     ports:
       - "8088:8088"
   historyserver:
@@ -38,26 +51,40 @@ services:
     command: /opt/hadoop-2.7.4/bin/yarn --config /etc/hadoop timelineserver && /opt/hadoop-2.7.4/sbin/mr-jobhistory-daemon.sh start historyserver
     volumes:
       - historyserver:/hadoop/yarn/timeline
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hadoop-hive.env
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.5
     ports:
       - "8188:8188"
   nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
+    volumes:
+      - ./network/hosts:/etc/hosts
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     env_file:
       - ./hadoop-hive.env
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.6
     ports:
       - "8042:8042"
   hive-server:
     image: local/hive-on-tez:2.3.5-0.9.2-impala
+    volumes:
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hadoop-hive.env
       - ./hbase-distributed-local.env
     environment:
       HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
       SERVICE_PRECONDITION: "hive-metastore:9083 namenode:50070 datanode:50075"
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.7
     ports:
       - "10000:10000"
       - "21000:21000"
@@ -68,46 +95,76 @@ services:
       - "7070:7070"
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    volumes:
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.8
     ports:
       - "9083:9083"
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+    volumes:
+      - ./network/hosts:/etc/hosts
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.9
     ports:
       - "5432:5432"
   zoo:
     image: zookeeper:3.4.10
+    volumes:
+      - ./network/hosts:/etc/hosts
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.10
     ports:
       - 2181:2181
   hbase-master:
     image: bde2020/hbase-master:1.0.0-hbase1.2.6
+    volumes:
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hbase-distributed-local.env
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zoo:2181"
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.11
     ports:
       - 16000:16000
       - 16010:16010
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
+    volumes:
+      - ./network/hosts:/etc/hosts
     env_file:
       - ./hbase-distributed-local.env
     environment:
       HBASE_CONF_hbase_regionserver_hostname: hbase-region
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zoo:2181 hbase-master:16010"
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.12
     ports:
       - 16020:16020
       - 16030:16030
 
   presto-coordinator:
     image: shawnzhu/prestodb:300
+    volumes:
+      - ./network/hosts:/etc/hosts
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.13
     ports:
       - "8080:8080"
 
@@ -117,6 +174,10 @@ services:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
       - ./proxy/conf.d:/etc/nginx/conf.d
       - ./proxy/conf.stream.d:/etc/nginx/conf.stream.d
+      - ./network/hosts:/etc/hosts
+    networks:
+         hivetez:
+            ipv4_address: 172.66.0.14
     ports:
       - "9998:9998"
 
@@ -124,3 +185,11 @@ volumes:
   namenode:
   datanode:
   historyserver:
+
+networks:
+   hivetez:
+      driver: bridge
+      ipam:
+         config:
+         - subnet: 172.66.0.0/16
+           gateway: 172.66.0.1
