--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    hostname: namenode
     volumes:
       - namenode:/hadoop/dfs/name
       - ./network/hosts:/etc/hosts
@@ -18,6 +19,7 @@ services:
       - "8020:8020"
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    hostname: datanode
     volumes:
       - datanode:/hadoop/dfs/data
       - ./network/hosts:/etc/hosts
@@ -33,6 +35,7 @@ services:
       - "50010:50010"
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
+    hostname: resourcemanager
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -46,6 +49,7 @@ services:
       - "8088:8088"
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
+    hostname: historyserver
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     command: /opt/hadoop-2.7.4/bin/yarn --config /etc/hadoop timelineserver && /opt/hadoop-2.7.4/sbin/mr-jobhistory-daemon.sh start historyserver
@@ -61,6 +65,7 @@ services:
       - "8188:8188"
   nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
+    hostname: nodemanager
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -73,7 +78,8 @@ services:
     ports:
       - "8042:8042"
   hive-server:
-    image: local/hive-on-tez:2.3.5-0.9.2-impala
+    image: local/hive-on-tez:2.3.5-0.9.2-impala-kylin
+    hostname: hive-server
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -95,6 +101,7 @@ services:
       - "7070:7070"
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    hostname: hive-metastore
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -109,6 +116,7 @@ services:
       - "9083:9083"
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+    hostname: hive-metastore-postgresql
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -118,6 +126,7 @@ services:
       - "5432:5432"
   zoo:
     image: zookeeper:3.4.10
+    hostname: zoo
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -130,6 +139,7 @@ services:
       - 2181:2181
   hbase-master:
     image: bde2020/hbase-master:1.0.0-hbase1.2.6
+    hostname: hbase-master
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -144,6 +154,7 @@ services:
       - 16010:16010
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
+    hostname: hbase-region
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -160,6 +171,7 @@ services:
 
   presto-coordinator:
     image: shawnzhu/prestodb:300
+    hostname: presto-coordinator
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -170,6 +182,7 @@ services:
 
   nginx-proxy:
     image: docker.io/nginx:1.13
+    hostname: nginx-proxy
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
       - ./proxy/conf.d:/etc/nginx/conf.d
@@ -192,4 +205,3 @@ networks:
       ipam:
          config:
          - subnet: 172.66.0.0/16
-           gateway: 172.66.0.1
