--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     hostname: namenode
+    dns: aliDNS
     volumes:
       - namenode:/hadoop/dfs/name
       - ./network/hosts:/etc/hosts
@@ -20,6 +21,7 @@ services:
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     hostname: datanode
+    dns: aliDNS
     volumes:
       - datanode:/hadoop/dfs/data
       - ./network/hosts:/etc/hosts
@@ -36,6 +38,7 @@ services:
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
     hostname: resourcemanager
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -50,6 +53,7 @@ services:
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
     hostname: historyserver
+    dns: aliDNS
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     command: /opt/hadoop-2.7.4/bin/yarn --config /etc/hadoop timelineserver && /opt/hadoop-2.7.4/sbin/mr-jobhistory-daemon.sh start historyserver
@@ -66,6 +70,7 @@ services:
   nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
     hostname: nodemanager
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -80,6 +85,7 @@ services:
   hive-server:
     image: local/hive-on-tez:2.3.5-0.9.2-impala-kylin
     hostname: hive-server
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -102,6 +108,7 @@ services:
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     hostname: hive-metastore
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -117,6 +124,7 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
     hostname: hive-metastore-postgresql
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -127,6 +135,7 @@ services:
   zoo:
     image: zookeeper:3.4.10
     hostname: zoo
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -140,6 +149,7 @@ services:
   hbase-master:
     image: bde2020/hbase-master:1.0.0-hbase1.2.6
     hostname: hbase-master
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -155,6 +165,7 @@ services:
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
     hostname: hbase-region
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -172,6 +183,7 @@ services:
   presto-coordinator:
     image: shawnzhu/prestodb:300
     hostname: presto-coordinator
+    dns: aliDNS
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -183,6 +195,7 @@ services:
   nginx-proxy:
     image: docker.io/nginx:1.13
     hostname: nginx-proxy
+    dns: aliDNS
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
       - ./proxy/conf.d:/etc/nginx/conf.d
@@ -204,4 +217,8 @@ networks:
       driver: bridge
       ipam:
          config:
-         - subnet: 172.66.0.0/16
+           - subnet: 172.66.0.0/16
+
+dns:
+   aliDNS: 
+     - 223.5.5.5
