--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     hostname: namenode
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - namenode:/hadoop/dfs/name
       - ./network/hosts:/etc/hosts
@@ -21,7 +21,7 @@ services:
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     hostname: datanode
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - datanode:/hadoop/dfs/data
       - ./network/hosts:/etc/hosts
@@ -38,7 +38,7 @@ services:
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
     hostname: resourcemanager
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -53,7 +53,7 @@ services:
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
     hostname: historyserver
-    dns: aliDNS
+    dns: 223.5.5.5
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     command: /opt/hadoop-2.7.4/bin/yarn --config /etc/hadoop timelineserver && /opt/hadoop-2.7.4/sbin/mr-jobhistory-daemon.sh start historyserver
@@ -70,7 +70,7 @@ services:
   nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
     hostname: nodemanager
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -85,7 +85,7 @@ services:
   hive-server:
     image: local/hive-on-tez:2.3.5-0.9.2-impala-kylin
     hostname: hive-server
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -108,7 +108,7 @@ services:
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     hostname: hive-metastore
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -124,7 +124,7 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
     hostname: hive-metastore-postgresql
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -135,7 +135,7 @@ services:
   zoo:
     image: zookeeper:3.4.10
     hostname: zoo
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     environment:
@@ -149,7 +149,7 @@ services:
   hbase-master:
     image: bde2020/hbase-master:1.0.0-hbase1.2.6
     hostname: hbase-master
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -165,7 +165,7 @@ services:
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
     hostname: hbase-region
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     env_file:
@@ -183,7 +183,7 @@ services:
   presto-coordinator:
     image: shawnzhu/prestodb:300
     hostname: presto-coordinator
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
     networks:
@@ -195,7 +195,7 @@ services:
   nginx-proxy:
     image: docker.io/nginx:1.13
     hostname: nginx-proxy
-    dns: aliDNS
+    dns: 223.5.5.5
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
       - ./proxy/conf.d:/etc/nginx/conf.d
@@ -218,7 +218,3 @@ networks:
       ipam:
          config:
            - subnet: 172.66.0.0/16
-
-dns:
-   aliDNS: 
-     - 223.5.5.5
