--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     hostname: namenode
-    dns: 223.5.5.5
     volumes:
       - namenode:/hadoop/dfs/name
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -21,10 +21,10 @@ services:
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     hostname: datanode
-    dns: 223.5.5.5
     volumes:
       - datanode:/hadoop/dfs/data
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -38,9 +38,9 @@ services:
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
     hostname: resourcemanager
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
     env_file:
@@ -53,13 +53,13 @@ services:
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
     hostname: historyserver
-    dns: 223.5.5.5
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     command: /opt/hadoop-2.7.4/bin/yarn --config /etc/hadoop timelineserver && /opt/hadoop-2.7.4/sbin/mr-jobhistory-daemon.sh start historyserver
     volumes:
       - historyserver:/hadoop/yarn/timeline
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hadoop-hive.env
     networks:
@@ -70,9 +70,9 @@ services:
   nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
     hostname: nodemanager
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     env_file:
@@ -85,9 +85,9 @@ services:
   hive-server:
     image: local/hive-on-tez:2.3.5-0.9.2-impala-kylin
     hostname: hive-server
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hadoop-hive.env
       - ./hbase-distributed-local.env
@@ -108,9 +108,9 @@ services:
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     hostname: hive-metastore
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
@@ -124,9 +124,9 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
     hostname: hive-metastore-postgresql
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     networks:
          hivetez:
             ipv4_address: 172.66.0.9
@@ -135,9 +135,9 @@ services:
   zoo:
     image: zookeeper:3.4.10
     hostname: zoo
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888
@@ -149,9 +149,9 @@ services:
   hbase-master:
     image: bde2020/hbase-master:1.0.0-hbase1.2.6
     hostname: hbase-master
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hbase-distributed-local.env
     environment:
@@ -165,9 +165,9 @@ services:
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
     hostname: hbase-region
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./hbase-distributed-local.env
     environment:
@@ -183,9 +183,9 @@ services:
   presto-coordinator:
     image: shawnzhu/prestodb:300
     hostname: presto-coordinator
-    dns: 223.5.5.5
     volumes:
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     networks:
          hivetez:
             ipv4_address: 172.66.0.13
@@ -195,12 +195,12 @@ services:
   nginx-proxy:
     image: docker.io/nginx:1.13
     hostname: nginx-proxy
-    dns: 223.5.5.5
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
       - ./proxy/conf.d:/etc/nginx/conf.d
       - ./proxy/conf.stream.d:/etc/nginx/conf.stream.d
       - ./network/hosts:/etc/hosts
+      - /etc/resolv.conf:/etc/resolv.conf
     networks:
          hivetez:
             ipv4_address: 172.66.0.14
